--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -1,74 +1,13 @@
-<div class="site-wrapper">
-
-    <div class="cover-container">
-
+<section class="welcome">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Kujon - mobilny dostęp do Twojej uczelni</h2>
-                <p class="lead">Najlepszy dostęp do Twoich studenckich danych poprzez Twojego smarfona. Dzięki
-                    kujonowi możesz na swoim telefonie przeglądać plan zajęć, przedmioty i oceny a także znajomych
-                    których poznałeś w trakcie studiów.
-                </p>
+            <div class="col-sm-12 text-center">
+                <h1>Witamy w <span>Kujon.mobi</span>!</h1>
+                <!--
+                <p>Dziękujemy za rejestrację. Kliknij dalej i przejdź do wyboru uczelni.</p>
+                <a href="wybor-uczelni.html" class="btn btn-default btn-welcome" type="submit">Przejdź dalej</a>
+                -->
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Integrujemy się z największymi uczelniami w tym</h2>
-            </div>
-        </div>
-
-        <div class="row">
-
-            {{#data}}
-            <div class="col-md-2 col-xs-4">
-                <a class="thumbnail" href="#" title="{{name}}">
-                    <img class="img-responsive" src="{{logo}}">
-                </a>
-            </div>
-            {{/data}}
-
-        </div>
-
-        <div class="row">
-
-            <div class="inner cover ">
-                <h2 class="cover-heading">Pobierz wersję mobilną</h2>
-                <p class="lead">Z kujona możesz korzystać na smartfonie i w dowolnej przeglądarce. W tej chwili
-                    obsługujemy aplikacje mobilną na platformę Android. Zobacz jak wyglądają dane studenckie na
-                    telefonie.</p>
-            </div>
-
-
-            <div class="col-md-4">
-                <a class="link-name" href="https://itunes.apple.com/pl/app/mobi.kujon">
-                    <div class="text-box" role="group">
-                        <div class="text" role="textbox">
-                            <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img
-                                    src="/static/img/pobierz-z-google-play.png" title=""/></a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a class="link-name" href="https://play.google.com/store/apps/details?id=mobi.kujon">
-                    <div class="text-box" role="group">
-                        <div class="text" role="textbox">
-                            <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img
-                                    src="/static/img/pobierz-z-app-store.png" title=""/></a>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <!--<div class="col-md-4">-->
-            <!--<a class="link-name" href="http://apps.microsoft.com/windows/pl-pl/app/kujon-io"  >-->
-            <!--<div class="text-box" role="group">-->
-            <!--<div class="text" role="textbox" >-->
-            <!--<p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-windows-phone-store.png" title="" /></a>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</a>-->
-            <!--</div>-->
         </div>
     </div>
-</div>
+</section>
