--- a/web/templates/disclaimer.html
+++ b/web/templates/disclaimer.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block header %}
 <div class="site-wrapper">
     <div class="site-wrapper-inner">
         <div class="cover-container">
@@ -58,7 +61,8 @@
                                     <li>w sposób nieutrudniający korzystania z aplikacji innym użytkownikom lub
                                         Operatorowi
                                     </li>
-                                    <li>w sposób niezakłócający funkcjonowania aplikacji i systemów uniwersyteckich.</li>
+                                    <li>w sposób niezakłócający funkcjonowania aplikacji i systemów uniwersyteckich.
+                                    </li>
                                 </ol>
                             </li>
                             <li>U nas nie ma tolerancji dla niewłaściwych, szkodliwych treści.</li>
@@ -132,10 +136,12 @@
                                 stronie <a href="https://www.usos.edu.pl/">www.usos.edu.pl</a>
                                 lub na stronie swojej uczelni. Pamiętaj o przestrzeganiu regulaminu korzystania z USOS.
                             </li>
-                            <li>Kujon integruje się także z portalami Facebook i Google których prawa intelektualne należą
+                            <li>Kujon integruje się także z portalami Facebook i Google których prawa intelektualne
+                                należą
                                 do właścicieli tych portali. Regulamin i zasady obowiązujęce na Facebook są dostępne pod
                                 adresem <a href="https://pl-pl.facebook.com/policies/">pl-pl.facebook.com/policies</a>
-                                a Prywatność i warunki Gogole możesz przeczytać na stronie <a href="https://www.google.com/intl/pl/policies/">google.com/intl/pl/policies</a>.
+                                a Prywatność i warunki Gogole możesz przeczytać na stronie <a
+                                        href="https://www.google.com/intl/pl/policies/">google.com/intl/pl/policies</a>.
                             </li>
                         </ol>
                         <h2>VI. ODPOWIEDZIALNOŚĆ </h2>
@@ -178,67 +184,67 @@
                                 którym zostają one udostępniane. Zachęcamy do zapoznania się z niniejszą Polityką
                                 Prywatności. Poprzez korzystanie z naszej strony lub Aplikacji (nasz “Serwis”), wyrażasz
                                 akceptację praktyk zawartych w niniejszej Polityce Prywatności.</p>
-                                <li>Administratorem danych, zgodnie z określeniem Ustawy jest firma Marao zarejestrowana
-                                    w
-                                    Polsce i podlegająca jej prawom, z siedzibą w Warszawie ul. Dickensa 31a/21,
-                                    REGON: 142968125, NIP: 1132027580 (“Administrator”).
-                                </li>
-                                <li>Dane osobiste są przetwarzane przez Administratora w celu zapewnienia możliwości
-                                    pełnego korzystania z funkcjonalności Kujon oraz weryfikacji wieku użytkownika.
-                                    Możemy użyć informacji, które zbieramy w celu:
-                                    <ol style="list-style-type:lower-latin">
-                                        <li>Dostarczania i ulepszania naszych produktów, usług oraz zarządzania naszą
-                                            Firmą;
-                                        </li>
-                                        <li>Wykonywania badań oraz analiz dotyczących sposobu korzystania z aplikacji.
-                                        </li>
-                                        <li>Komunikacji z tobą</li>
-                                        <li>Analizy strony internetowej oraz samej aplikacji</li>
-                                        <li>Egzekwowania zasad zawartych w Regulaminie</li>
-                                        <li>Wykonywania funkcji i usług wyszczególnionych w momencie pobrania danych</li>
-                                        <li>Wyświetlania spersonalizowanych reklam</li>
-                                    </ol>
-                                </li>
-                                <li>Dane osobiste pozyskiwane przez Administratora zawierają między innymi:
-                                    <ol style="list-style-type:lower-latin">
-                                        <li>Adres email (opcjonalnie)</li>
-                                        <li>Login oraz nazwa użytkownika w aplikacji</li>
-                                        <li>Zdjęcia (opcjonalnie)</li>
-                                        <li>Lokalizacja użytkownika</li>
-                                        <li>Płeć (opcjonalnie)</li>
-                                    </ol>
-                                </li>
-                                <li>Dane są przetwarzane zgodnie z odpowiednimi regulacjami, łącznie z Ustawą oraz
-                                    Ustawą o Świadczeniu Usług Elektronicznych.
-                                </li>
-                                <li>Masz prawo do dostępu, zmiany, uzupełnienia i w uzasadnionym przypadku – do
-                                    wymagania usunięcia twoich danych oraz zaprzestania ich przetwarzania. W tym celu
-                                    powinieneś powiadomić Administratora lub skorzystać z opcji dostępnych w interfejsie
-                                    kujon. Możesz przeglądać i aktualizować swoje osobiste dane wewnątrz kujon,
-                                    poprzez uruchomienie aplikacji i przejście do ustawień.
-                                </li>
-                                <li>Informacje o twoim numerze IP oraz twoim urządzeniu, jak również inne dane dotyczące
-                                    twoich aktywności również mogą być przetwarzane.
-                                </li>
-                                <li><p>Dane, które udostępniasz</p>
-                                    <p>Możemy pozyskiwać i gromadzić zdjęcia i obrazy, które ustawiasz jako zdjęcie
-                                        profilowe.
-                                        Możesz również dostarczyć informację dotyczącą twojej płci.<br>Jeśli za
-                                        pośrednictwem
-                                        Aplikacji prowadzisz konwersacje z innymi użytkownikami.<br>Ograniczamy
-                                        grupę odbiorców naszych Serwisów do osób, które ukończyły co najmniej 18 lat.
-                                        Świadomie
-                                        nie pozyskujemy, nie przetwarzamy ani nie używamy informacji dostarczonych przez
-                                        użytkowników, którzy nie ukończyli 18 roku życia.</p>
-                                    <p>Niniejsza Polityka Prywatności może zostać zaktualizowana. W momencie dokonania
-                                        aktualizacji Polityki Prywatności, umieścimy jej najnowszą wersję wraz z datą
-                                        wprowadzenia zmian na górze podstrony „Polityka Prywatności” w ramach naszego
-                                        Serwisu.
-                                        Zalecamy okazjonalne sprawdzanie naszych Serwisów, w celu zapoznania się ze
-                                        zmianami w
-                                        naszej Polityce Prywatności etc.</p>
-                                </li>
-                                <li>Pliki cookies wykorzystywane są w celu:
+                            <li>Administratorem danych, zgodnie z określeniem Ustawy jest firma Marao zarejestrowana
+                                w
+                                Polsce i podlegająca jej prawom, z siedzibą w Warszawie ul. Dickensa 31a/21,
+                                REGON: 142968125, NIP: 1132027580 (“Administrator”).
+                            </li>
+                            <li>Dane osobiste są przetwarzane przez Administratora w celu zapewnienia możliwości
+                                pełnego korzystania z funkcjonalności Kujon oraz weryfikacji wieku użytkownika.
+                                Możemy użyć informacji, które zbieramy w celu:
+                                <ol style="list-style-type:lower-latin">
+                                    <li>Dostarczania i ulepszania naszych produktów, usług oraz zarządzania naszą
+                                        Firmą;
+                                    </li>
+                                    <li>Wykonywania badań oraz analiz dotyczących sposobu korzystania z aplikacji.
+                                    </li>
+                                    <li>Komunikacji z tobą</li>
+                                    <li>Analizy strony internetowej oraz samej aplikacji</li>
+                                    <li>Egzekwowania zasad zawartych w Regulaminie</li>
+                                    <li>Wykonywania funkcji i usług wyszczególnionych w momencie pobrania danych</li>
+                                    <li>Wyświetlania spersonalizowanych reklam</li>
+                                </ol>
+                            </li>
+                            <li>Dane osobiste pozyskiwane przez Administratora zawierają między innymi:
+                                <ol style="list-style-type:lower-latin">
+                                    <li>Adres email (opcjonalnie)</li>
+                                    <li>Login oraz nazwa użytkownika w aplikacji</li>
+                                    <li>Zdjęcia (opcjonalnie)</li>
+                                    <li>Lokalizacja użytkownika</li>
+                                    <li>Płeć (opcjonalnie)</li>
+                                </ol>
+                            </li>
+                            <li>Dane są przetwarzane zgodnie z odpowiednimi regulacjami, łącznie z Ustawą oraz
+                                Ustawą o Świadczeniu Usług Elektronicznych.
+                            </li>
+                            <li>Masz prawo do dostępu, zmiany, uzupełnienia i w uzasadnionym przypadku – do
+                                wymagania usunięcia twoich danych oraz zaprzestania ich przetwarzania. W tym celu
+                                powinieneś powiadomić Administratora lub skorzystać z opcji dostępnych w interfejsie
+                                kujon. Możesz przeglądać i aktualizować swoje osobiste dane wewnątrz kujon,
+                                poprzez uruchomienie aplikacji i przejście do ustawień.
+                            </li>
+                            <li>Informacje o twoim numerze IP oraz twoim urządzeniu, jak również inne dane dotyczące
+                                twoich aktywności również mogą być przetwarzane.
+                            </li>
+                            <li><p>Dane, które udostępniasz</p>
+                                <p>Możemy pozyskiwać i gromadzić zdjęcia i obrazy, które ustawiasz jako zdjęcie
+                                    profilowe.
+                                    Możesz również dostarczyć informację dotyczącą twojej płci.<br>Jeśli za
+                                    pośrednictwem
+                                    Aplikacji prowadzisz konwersacje z innymi użytkownikami.<br>Ograniczamy
+                                    grupę odbiorców naszych Serwisów do osób, które ukończyły co najmniej 18 lat.
+                                    Świadomie
+                                    nie pozyskujemy, nie przetwarzamy ani nie używamy informacji dostarczonych przez
+                                    użytkowników, którzy nie ukończyli 18 roku życia.</p>
+                                <p>Niniejsza Polityka Prywatności może zostać zaktualizowana. W momencie dokonania
+                                    aktualizacji Polityki Prywatności, umieścimy jej najnowszą wersję wraz z datą
+                                    wprowadzenia zmian na górze podstrony „Polityka Prywatności” w ramach naszego
+                                    Serwisu.
+                                    Zalecamy okazjonalne sprawdzanie naszych Serwisów, w celu zapoznania się ze
+                                    zmianami w
+                                    naszej Polityce Prywatności etc.</p>
+                            </li>
+                            <li>Pliki cookies wykorzystywane są w celu:
                                 dostosowania zawartości stron internetowych Serwisu do preferencji Użytkownika oraz
                                 optymalizacji korzystania ze stron internetowych; w szczególności pliki te pozwalają
                                 rozpoznać urządzenie Użytkownika Serwisu i odpowiednio wyświetlić stronę internetową,
@@ -254,20 +260,23 @@
                                 internetowej). „Stałe” pliki cookies przechowywane są w urządzeniu końcowym Użytkownika
                                 przez czas określony w parametrach plików cookies lub do czasu ich usunięcia przez
                                 Użytkownika.
-                                </li><li>Informacje o możliwości i sposobach obsługi plików
+                            </li>
+                            <li>Informacje o możliwości i sposobach obsługi plików
                                 cookies dostępne są w ustawieniach oprogramowania (przeglądarki internetowej).
                                 Operator Kujona informuje, że ograniczenia stosowania plików cookies mogą wpłynąć na
                                 niektóre funkcjonalności dostępne na stronach internetowych Serwisu.
                                 Pliki cookies zamieszczane w urządzeniu końcowym Kujona i wykorzystywane
                                 mogą być również przez współpracujących z Operatorem reklamodawców oraz
                                 partnerów.
-                                </li>
+                            </li>
                         </div>
 
                         <h2>IX. POSTANOWIENIA KOŃCOWE</h2>
                         <ol>
-                            <li>Operator jest upoważniony do dokonywania zmian w niniejszej Umowie i Politce prywatności w
-                                dowolnym momencie. Jako użytkownik, zostaniesz poinformowany o zmianach z co najmniej 7 dniowym
+                            <li>Operator jest upoważniony do dokonywania zmian w niniejszej Umowie i Politce prywatności
+                                w
+                                dowolnym momencie. Jako użytkownik, zostaniesz poinformowany o zmianach z co najmniej 7
+                                dniowym
                                 wyprzedzeniem. W przypadku braku zgody na proponowane zmiany, masz prawo do zerwania
                                 niniejszej Umowy.
                             </li>
@@ -284,3 +293,6 @@
         </div>
     </div>
 </div>
+
+
+{% end %}
