--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -1,24 +1,41 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4>Nauczyciele</h4>
-    </div>
-    <div class="panel-body">
-        <table id="lecturers-table" class="table table-hover table-responsive">
-            <thead>
-            <th>Nazwisko</th>
-            <th>Imię</th>
-            </thead>
-            <tbody>
-            {{#data}}
-            <tr>
-                <td><a class="btn btn-link lecturer-btn" type="button" data-lecturerId="{{user_id}}">{{last_name}}</a></td>
-                <td>{{first_name}}</td>
-            </tr>
-            {{/data}}
-            </tbody>
-        </table>
+<section id="wykladowcy">
+    <div class="container">
+        <div class="row">
 
+            <div class="col-sm-12 content table-responsive prof">
+                <div class="naglowek-h2">
+                    <h2>Wykładowcy</h2>
+                </div>
+                <table id="myTable" class="table"
+                       data-toggle="table"
+                       data-pagination="true"
+                       data-search="true"
+                       data-sort-name="name">
+                    <thead>
+                    <tr>
+                        <th data-sortable="true">Nazwisko</th>
+                        <th data-sortable="true">Imię</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#data}}
+                    <tr>
+                        <td><a class="btn btn-link lecturer-btn" type="button" data-lecturerId="{{user_id}}">{{last_name}}</a>
+                        </td>
+                        <td>{{first_name}}</td>
+                    </tr>
+                    {{/data}}
+
+
+                    </tbody>
+                </table>
+
+            </div>
+
+        </div>
     </div>
-</div>
+
+</section>
+
 
 <div id="modalWrapper"></div>
