--- a/web/static/templates/contact.html
+++ b/web/static/templates/contact.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-12">
-                            <p class="zalaczniki">Załączniki</p>
+                            <p class="zalaczniki">Załącznik</p>
                             <div class="upload">
                                 <input class="wybierz-plik" type="file" name="upload" size="10"/>
                             </div>
