--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -1,32 +1,14 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Kujon - mobilny dostęp do danych studenckich</title>
-    <meta name="description" content="Kujon - mobilny dostęp do Uczelni">
-    <meta name="keywords" content="kujon, kujon.mobi, usos, usosweb na smartphone, uczelnia, aplikacja, uniwersytet">
+{% extends "base.html" %}
 
-    <!-- Bootstrap -->
-    <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/style.css" rel="stylesheet">
+{% block header_js %}
 
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500,500italic,700,700italic,900,900italic'
-          rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="/static/require.config.js"></script>
+<script type="text/javascript" data-main="/static/js/startup.js"
+        src="/static/bower_components/requirejs/require.js"></script>
 
-    <link rel="stylesheet" href="/static/bower_components/font-awesome/css/font-awesome.min.css">
+{% end %}
 
-
-    <script type="text/javascript" src="/static/require.config.js"></script>
-    <script type="text/javascript" data-main="/static/js/startup.js"
-            src="/static/bower_components/requirejs/require.js"></script>
-
-
-</head>
-<body class="body-index">
-
+{% block navigation %}
 <nav class="navbar navbar-default nawigacja-app navbar-fixed-top" role="navigation" id="slide-nav">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -66,6 +48,8 @@
                         <li><a href="#faculties">Jednostki</a></li>
                         <li><a href="#contact">Kontakt</a></li>
 
+                        <li><a href="{{API_URL}}/authentication/logout">Wyloguj</a></li>
+
                         <!--
                         <li><a href="#tt">Plan</a></li>
                         <li><a href="#courses">Przedmioty</a></li>
@@ -91,6 +75,7 @@
                 <li><a href="#faculties">Jednostki</a></li>
                 <li><a href="#contact">Kontakt</a></li>
 
+
                 <!--
                 <li><a href="#tt">Plan</a></li>
                 <li><a href="#courses">Przedmioty</a></li>
@@ -106,6 +91,9 @@
     </div><!-- /.container-fluid -->
 
 </nav>
+{% end %}
+
+{% block main %}
 <div id="page-content" class="content">
     <section class="welcome">
         <div class="container">
@@ -142,6 +130,4 @@
         </div>
     </footer>
 </div>
-
-</body>
-</html>
+{% end %}
