--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -14,10 +14,7 @@
     <!-- Bootstrap -->
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
-
-    <!--
     <link href="/static/bower_components/jquery.cookiebar/dist/jquery.cookiebar.min.css" rel="stylesheet">
-    -->
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500,500italic,700,700italic,900,900italic'
           rel='stylesheet' type='text/css'>
@@ -30,11 +27,8 @@
     <script src="/static/bower_components/respond/dest/respond.min.js"></script>
     <![endif]-->
 
-    <!--
-    <script type="text/javascript" src="/static/require.config.js"></script>
-    <script type="text/javascript" data-main="/static/js/startup.js"
-            src="/static/bower_components/requirejs/require.js"></script>
-    -->
+    {% block header_js %}
+    {% end %}
 
 </head>
 <body>
@@ -43,78 +37,14 @@
           <p>Ta strona używa ciasteczek (cookies), dzięki którym nasz serwis może działać lepiej. <a href="#">Więcej informacji</a><span><span></p>
         </div>
   </div>-->
-<nav class="navbar navbar-fixed-top navigacja" role="navigation" id="slide-nav">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo.png" class="img-responsive"/></a>
-        </div>
-        <div id="slidemenu">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#loginModal">
-                        Zaloguj się
-                    </button>
-                </li>
-                <!--
-                <li><a class="page-scroll" href="lista-uczelni.html">Lista uczelni</a></li>
-                -->
-                <li><a class="page-scroll" href="regulamin">Regulamin</a></li>
-                <li><a class="page-scroll" href="kontakt">Kontakt</a></li>
-                {% if current_user %}
-                <li>
-                    <a type="button" class="btn btn-group log logowanie" href="{{API_URL}}/authentication/logout">
-                        Wyloguj
-                    </a>
-                </li>
-                {% else %}
-                <li>
-                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#loginModal">
-                        Zaloguj się
-                    </button>
-                </li>
-                {% end %}
-            </ul>
-        </div>
-    </div>
-</nav>
+
+{% block navigation %}
+{% end %}
 
 <div id="page-content">
-    {% block header %}
+    {% block main %}
     {% end %}
 </div>
-
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-6 col-xs-12">
-                    <p>Copyright 2016 by <a class="copy-link" href="kujon.mobi">Kujon.mobi</a>. All rights reserved
-                    </p>
-                </div>
-                <div class="col-md-6 col-xs-12">
-                    <nav class="navbar navbar-footer">
-                        <ul class="nav navbar-nav navbar-right navbar-bottom">
-                            <!--
-                            <li><a href="lista-uczelni.html">Lista uczelni</a></li>
-                            -->
-                            <li><a href="regulamin">Regulamin</a></li>
-                            <li><a href="kontakt">Kontakt</a></li>
-                            <li class="fb"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li class="andr"><a href="#"><span class="fa fa-android"></span></a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 
 
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel">
@@ -158,29 +88,28 @@
     </div>
 </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
+<footer id="footer" class="navbar-static-bottom">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <p class="footer-block">Copyright 2016 by <a href="http://kujon.mobi">Kujon.mobi</a>. All rights
+                    reserved.</p>
+            </div>
+            <div class="col-sm-6">
+                <ul class="nav navbar-nav navbar-right navbar-bottom">
+                    <li><a href="regulamin">Regulamin</a></li>
+                    <li><a href="regulamin">Polityka prywatności</a></li>
+                    <li><a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i> Kontakt</a></li>
+                    <li class="fb"><a href="#"><span class="fa fa-facebook"></span></a></li>
+                    <li class="andr"><a href="#"><span class="fa fa-android"></span></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
-
-<script type="text/javascript" src="/static/bower_components/jquery.cookiebar/dist/jquery.cookiebar.min.js"></script>
-
-
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/static/bower_components/jquery.easing/js/jquery.easing.min.js"></script>
-<script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/static/js/scrolling-nav.js"></script>
-<script src="/static/js/scripts.js"></script>
-
-<!--
-<script type="text/javascript">
-  $(document).ready(function(){
-     $.cookieBar({
-
-
-	 });
-  });
-</script>
--->
+{% block footer_js %}
+{% end %}
 
 </body>
 </html>
