--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,6 +1,38 @@
 {% extends "base.html" %}
 
-{% block header %}
+{% block navigation %}
+<nav class="navbar navbar-fixed-top navigacja" role="navigation" id="slide-nav">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo.png" class="img-responsive"/></a>
+        </div>
+        <div id="slidemenu">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#loginModal">
+                        Zaloguj się
+                    </button>
+                </li>
+
+                <li>
+                    <button class="btn btn-group log logowanie" href="#" data-toggle="modal" data-target="#loginModal">
+                        Zaloguj się
+                    </button>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+{% end %}
+
+{% block main %}
 <header>
     <div class="container">
         <div class="row">
@@ -26,6 +58,7 @@
         </div>
     </div>
 </header>
+
 <section id="pomoc">
     <div class="container">
         <div class="row">
@@ -89,6 +122,27 @@
         </div>
     </div>
 </section>
+{% end %}
 
+{% block footer_js %}
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="/static/bower_components/jquery.cookiebar/dist/jquery.cookiebar.min.js"></script>
+
+
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="/static/bower_components/jquery.easing/js/jquery.easing.min.js"></script>
+<script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/static/js/scrolling-nav.js"></script>
+<script src="/static/js/scripts.js"></script>
+<script type="text/javascript">
+	  $(document).ready(function(){
+		 $.cookieBar({
+		 });
+	  });
+
+
+</script>
 
 {% end %}
